--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
   <h1>
   Welcome to LVC Video Chat Room!
   </h1>
-  <div id="remote-media"></div>
-  <div id="controls">
-    <div id="preview">
-      <p class="instructions">Lookin' good!</p>
-      <div id="local-media"></div>
-      <button id="button-preview">Wanna See Yourself?</button>
+    <div id="startDiv">
+        <p>Enter Your Name Here:</p>
+        <input id="my-name" 
+            placeholder="your name"/>
+        <button id="start">Let's Do This!</button>
     </div>
-    <div id="invite-controls">
-      <p class="instructions">Invite an Endpoint</p>
-      <input id="invite-to" type="text" placeholder="Address to send an invite to" />
-      <button id="button-invite">Send Invite</button>
-    </div>
-    <div id="log">
-      <p>&gt;&nbsp;<span id="log-content">Preparing to listen</span>...</p>
-    </div>
-  </div><!-- /controls -->
+ 
+    <!-- Here's the call UI -->
+    <div id="callDiv" style="display:none;">
+        <div id="me"></div>
+        <div id="you"></div>
+        <div>
+            <input id="other-name" placeholder="other person's name"/>
+            <button id="call">Video Call This Person</button>
+        </div>
+    </div><!-- /controls -->
   <script src="https://media.twiliocdn.com/sdk/rtc/js/v0.8/twilio-rtc-conversations.min.js"></script>
   <script src="quickstart.js"></script>
   </body>
