--- a/quickstart.html
+++ b/quickstart.html
@@ -4,10 +4,11 @@
     <link rel="stylesheet" href="//media.twiliocdn.com/sdk/quickstart/rtc-conversations-quickstart.min.css">
   </head>
   <body>
+  <h1>Family Meeting Room</h1>
   <div id="remote-media"></div>
   <div id="controls">
     <div id="preview">
-      <p class="instructions">Lookin' good!</p>
+      <p class="instructions">Hey Good Lookin!</p>
       <div id="local-media"></div>
       <button id="button-preview">Preview My Camera</button>
     </div>
