--- a/quickstart.html
+++ b/quickstart.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="//media.twiliocdn.com/sdk/quickstart/rtc-conversations-quickstart.min.css">
   </head>
   <body>
-  <h1>Family Meeting Room</h1>
+  <h1><FONT color = maroon>Family Meeting Room</FONT></h1>
   <div id="remote-media"></div>
   <div id="controls">
     <div id="preview">
