--- a/quickstart.html
+++ b/quickstart.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Lucilla's Family Video Chat</title>
-    <link rel="stylesheet" href="//media.twiliocdn.com/sdk/quickstart/rtc-conversations-quickstart.min.css">
+    <link rel="stylesheet" href="style-sheet.css">
   </head>
   <body>
   <h1><FONT color = maroon>Family Meeting Room</FONT></h1>
