--- a/quickstart.html
+++ b/quickstart.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <title>Lucilla's Family Video Chat</title>
+    <title>Chalmer Chat</title>
     <link rel="stylesheet" href="style-sheet.css">
   </head>
   <body>
-  <h1>Family Meeting Room</h1>
+  <img src="Screen Shot 2015-07-24 at 4.32.38 PM.png" align="middle"/>
   <div id="remote-media"></div>
   <div id="controls">
     <div id="preview">
