--- a/quickstart.html
+++ b/quickstart.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style-sheet.css">
   </head>
   <body>
-  <img src="Screen Shot 2015-07-24 at 4.32.38 PM.png" align="middle" style="width:30em; height:12em;/>
+  <h1></h1><img src="Screen Shot 2015-07-24 at 4.32.38 PM.png" align="middle" style="width:30em; height:12em;/></h1>
   <div id="remote-media"></div>
   <div id="controls">
     <div id="preview">
