Adding parental viewpoint

--- a/quickstart.html
+++ b/quickstart.html
@@ -8,7 +8,7 @@
   <div id="remote-media"></div>
   <div id="controls">
     <div id="preview">
-      <p class="instructions">Hey Good Lookin!</p>
+      <p class="instructions">Parental View Point</p>
       <div id="local-media"></div>
       <button id="button-preview">Preview My Camera</button>
     </div>
